--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <head>
 
 <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -13,7 +13,7 @@
 
 
 
-<link href="js/plugins/noUiSlider/jquery.nouislider.css" rel="stylesheet">
+<link href="css/tiles.css" rel="stylesheet">
 
 <style id="temporrr">
 .rotationBall {
@@ -150,88 +150,6 @@ position:absolute;
 background-size:cover;
 transform: rotateY(0deg);
 
-}
-.sensu {
-background-image:url('imgs/sensu.gif');	
-}
-	
-.tile:hover{
-cursor:pointer;
-}
-
-.freezer {
-background-image:url('imgs/freezer.png');
-}
-
-.freezer.bw {
-background-image:url('imgs/freezer_bw.png');
-}
-
-.cell {
-background-image:url('imgs/cell.png');	
-}
-
-.cell.bw {
-	background-image:url('imgs/cell.png');		
-}
-
-.c17 {
-background-image:url('imgs/c17.png');
-}
-
-.c17.bw {
-background-image:url('imgs/c17_bw.png');
-}
-
-.nappa {
-background-image:url('imgs/nappa.png');
-	}
-	
-.nappa.bw {
-	background-image:url('imgs/nappa_bw.png');
-	
-	}
-.c18 {
-background-image:url('imgs/c18.png');
-}
-
-.c18.bw {
-background-image:url('imgs/c18_bw.png');
-}
-
-.dodorio{
-background-image:url('imgs/dodorio.png');
-}
-
-.white {
-background-image:url('imgs/white.png');
-}
-.dodorio.bw{
-background-image:url('imgs/dodorio_bw.png');
-}
-
-.red {
-background-image:url('imgs/red.png');
-}
-
-.green {
-background-image:url('imgs/red.png');
-}
-
-.orange {
-background-image:url('imgs/orange.png');
-}
-
-.blue {
-background-image:url('imgs/blue.png');
-}
-
-.pink {
-background-image:url('imgs/pink.png');
-}
-
-.yellow {
-background-image:url('imgs/yellow.png');
 }
 
 .progress {
@@ -665,7 +583,6 @@ margin-bottom:10px;
 
 				
 			</div>
-			<!--//////////////////////////////////////////////////////SETTINGS///////////-->
 			<div id="settings" class='screen'>
 			<div style='display:inline-block;width:80%;'>
 			
